# Finger-geoparser

./: .gitignore  LICENSE  README.md  geoparser.py  location_coder.py  location_tagger.py  output_formatter.py  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
finger/: __init__.py  geoparser.py  location_coder.py  location_tagger.py  output_formatter.py  toponym_coder.py  toponym_tagger.py
fingerGeoparser/: geoparser.py
tests/: test_geoparsing.py
