[metadata]
name = finger
version = 0.1.0
author = Tatu Leppämäki
author_email = tatu.leppamaki@helsinki.fi
url = https://github.com/Tadusko/fi-geoparser
description = A geoparser for Finnish texts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geoparser, NLP, GIS, Finnish
license = MIT License

[options]
install_requires =
    pandas
	spacy==3.0.5
    spacy_transformers==1.0.0
    libvoikko
	geocoder
	voikko