[metadata]
name = fingerGeoparser
version = 0.2.0
author = Tatu Leppämäki
author_email = tatu.leppamaki@helsinki.fi
url = https://github.com/Tadusko/fi-geoparser
description = A geoparser for Finnish texts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geoparser, NLP, GIS, Finnish
license = MIT License

[options]
install_requires =
    pandas
    click==7.1.2
    spacy==3.5.2
    spacy_transformers==1.1.9
    tqdm
    aiohttp
    

package_dir =
    = finger
